# untitled-math-project

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
.circleci/: config.yml
js_code/: index.js  package-lock.json  package.json  rust_sci_test.d.ts  rust_sci_test.js
parser/: Cargo.toml  README.md
parser/src/: lib.rs
src/: lib.rs  main.rs
