[package]
name = "rust_sci_test"
version = "0.1.0"
authors = ["Your Name <baylyd@email.arizona.edu>"]

[dependencies]
parser = {path="./parser"}
ndarray = "0.11.0"
js-sys = {git= "https://github.com/rustwasm/wasm-bindgen"}

[dependencies.wasm-bindgen]
git = "https://github.com/rustwasm/wasm-bindgen" 
version = "^0.2"

[lib]
crate-type = ["cdylib"]

